// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-djltcn-0 bfhYXS"
  data-testid="header-bg"
>
  <div
    class="header__Container-djltcn-1 kWSTgG"
  >
    <p
      class="header__Link-djltcn-3 cqpntN"
    >
      Hello I'm a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-djltcn-1 kWSTgG"
>
  <p
    class="header__Link-djltcn-3 cqpntN"
  >
    Hello I'm a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header> with a background 1`] = `
<div
  class="header__Background-djltcn-0 kVsKcI"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-djltcn-1 kWSTgG"
  >
    <div
      class="header__Group-djltcn-4 GSeSC"
    >
      <p
        class="header__Link-djltcn-3 eQzaIp"
      >
        Series
      </p>
      <p
        class="header__Link-djltcn-3 eQzaIp"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-djltcn-4 GSeSC"
    >
      <div
        class="header__Search-djltcn-6 edMrmy"
      >
        <button
          class="header__SearchIcon-djltcn-7 eWcNWN"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-djltcn-5 bVRZKi"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-djltcn-11 iayyFk"
      >
        <button
          class="header__Picture-djltcn-9 jBmJfg"
          src="/images/users//images/emi.png.png"
        />
        <div
          class="header__Dropdown-djltcn-10 ebopFx"
        >
          <div
            class="header__Group-djltcn-4 GSeSC"
          >
            <button
              class="header__Picture-djltcn-9 jBmJfg"
              src="/images/users//images/emi.png.png"
            />
            <p
              class="header__Link-djltcn-3 eQzaIp"
            >
              Emi Castro
            </p>
          </div>
          <div
            class="header__Group-djltcn-4 GSeSC"
          >
            <p
              class="header__Link-djltcn-3 eQzaIp"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-djltcn-1 header__Feature-djltcn-12 kWSTgG jPdejX"
  >
    <h2
      class="header__FeatureCallOut-djltcn-14 glKtdG"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-djltcn-13 jenTxd"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-djltcn-15 kfgjRX"
    >
      Play
    </button>
  </div>
</div>
`;
